--- a/DataStructureAndAlgorithms/1.快速排序.md
+++ b/DataStructureAndAlgorithms/1.快速排序.md
@@ -57,6 +57,341 @@ public class QuickSort {
 3. **swap 方法**: 这个方法用于交换数组中的两个元素。
 4. **main 方法**: 这是程序的入口，用于测试快速排序算法。
 
+Keziah-li: 递归排序的代码说明，病注释，用Java说明
+
+GitHub Copilot: 下面是快速排序和归并排序的Java代码示例，并附有详细注释。
+
+### 快速排序（Quick Sort）
+
+```java
+
+
+public class QuickSort {
+
+    // 主函数，调用快速排序
+    public static void main(String[] args) {
+        int[] arr = {10, 7, 8, 9, 1, 5};
+        int n = arr.length;
+
+        quickSort(arr, 0, n - 1);
+
+        System.out.println("排序后的数组:");
+        printArray(arr);
+    }
+
+    // 快速排序函数
+    static void quickSort(int[] arr, int low, int high) {
+        if (low < high) {
+            // pi 是分区索引，arr[pi] 已经排好序
+            int pi = partition(arr, low, high);
+
+            // 递归地对左子数组和右子数组进行排序
+            quickSort(arr, low, pi - 1);
+            quickSort(arr, pi + 1, high);
+        }
+    }
+
+    // 分区函数
+    static int partition(int[] arr, int low, int high) {
+        int pivot = arr[high]; // 选择最后一个元素作为基准
+        int i = (low - 1); // 较小元素的索引
+
+        for (int j = low; j < high; j++) {
+            // 如果当前元素小于或等于基准
+            if (arr[j] <= pivot) {
+                i++;
+
+                // 交换 arr[i] 和 arr[j]
+                int temp = arr[i];
+                arr[i] = arr[j];
+                arr[j] = temp;
+            }
+        }
+
+        // 交换 arr[i+1] 和 arr[high] (或基准)
+        int temp = arr[i + 1];
+        arr[i + 1] = arr[high];
+        arr[high] = temp;
+
+        return i + 1;
+    }
+
+    // 打印数组
+    static void printArray(int[] arr) {
+        int n = arr.length;
+        for (int i = 0; i < n; ++i)
+            System.out.print(arr[i] + " ");
+        System.out.println();
+    }
+}
+```
+
+### 归并排序（Merge Sort）
+
+```java
+
+
+public class MergeSort {
+
+    // 主函数，调用归并排序
+    public static void main(String[] args) {
+        int[] arr = {12, 11, 13, 5, 6, 7};
+        int n = arr.length;
+
+        System.out.println("给定数组:");
+        printArray(arr);
+
+        mergeSort(arr, 0, n - 1);
+
+        System.out.println("\n排序后的数组:");
+        printArray(arr);
+    }
+
+    // 归并排序函数
+    static void mergeSort(int[] arr, int left, int right) {
+        if (left < right) {
+            // 找到中间点
+            int mid = (left + right) / 2;
+
+            // 递归地对左右子数组进行排序
+            mergeSort(arr, left, mid);
+            mergeSort(arr, mid + 1, right);
+
+            // 合并两个子数组
+            merge(arr, left, mid, right);
+        }
+    }
+
+    // 合并两个子数组
+    static void merge(int[] arr, int left, int mid, int right) {
+        // 找到两个子数组的大小
+        int n1 = mid - left + 1;
+        int n2 = right - mid;
+
+        // 创建临时数组
+        int[] L = new int[n1];
+        int[] R = new int[n2];
+
+        // 复制数据到临时数组
+        for (int i = 0; i < n1; ++i)
+            L[i] = arr[left + i];
+        for (int j = 0; j < n2; ++j)
+            R[j] = arr[mid + 1 + j];
+
+        // 合并临时数组
+
+        // 初始索引
+        int i = 0, j = 0;
+
+        // 合并两个子数组
+        int k = left;
+        while (i < n1 && j < n2) {
+            if (L[i] <= R[j]) {
+                arr[k] = L[i];
+                i++;
+            } else {
+                arr[k] = R[j];
+                j++;
+            }
+            k++;
+        }
+
+        // 复制剩余元素
+        while (i < n1) {
+            arr[k] = L[i];
+            i++;
+            k++;
+        }
+
+        while (j < n2) {
+            arr[k] = R[j];
+            j++;
+            k++;
+        }
+    }
+
+    // 打印数组
+    static void printArray(int[] arr) {
+        int n = arr.length;
+        for (int i = 0; i < n; ++i)
+            System.out.print(arr[i] + " ");
+        System.out.println();
+    }
+}
+```
+
+这两个示例展示了如何使用递归实现快速排序和归并排序，并包含了详细的注释以帮助理解每一步骤。
+
+Similar code found with 2 license types
+
+Keziah-li: 还是无法理解快速排序中的分区方法，请帮忙解释，越详细越好
+private int partition(int[] array, int low, int high) {
+        int pivot = array[high]; // 选择最右边的元素作为枢轴
+        int i = low - 1; // 初始化较小元素的索引
+        for (int j = low; j < high; j++) { // 遍历数组
+            if (array[j] <= pivot) { // 如果当前元素小于或等于枢轴
+                i++; // 增加较小元素的索引
+                swap(array, i, j); // 交换元素
+            }
+        }
+        swap(array, i + 1, high); // 将枢轴元素放到正确的位置
+        return i + 1; // 返回枢轴的索引
+    }
+
+GitHub Copilot: ### 快速排序中的分区方法详细解释
+
+快速排序的核心在于分区（partition）操作。分区方法的目的是将数组分成两部分，使得左边部分的所有元素都小于等于枢轴（pivot），右边部分的所有元素都大于枢轴。下面是对分区方法的详细解释：
+
+```java
+private int partition(int[] array, int low, int high) {
+    int pivot = array[high]; // 选择最右边的元素作为枢轴
+    int i = low - 1; // 初始化较小元素的索引
+
+    // 遍历数组，从low到high-1
+    for (int j = low; j < high; j++) {
+        if (array[j] <= pivot) { // 如果当前元素小于或等于枢轴
+            i++; // 增加较小元素的索引
+            swap(array, i, j); // 交换元素
+        }
+    }
+
+    // 将枢轴元素放到正确的位置
+    swap(array, i + 1, high);
+    return i + 1; // 返回枢轴的索引
+}
+```
+
+#### 步骤解析：
+
+1. **选择枢轴**：
+   ```java
+   int pivot = array[high]; // 选择最右边的元素作为枢轴
+   ```
+   这里选择数组的最后一个元素作为枢轴。
+
+2. **初始化较小元素的索引**：
+   ```java
+   int i = low - 1; // 初始化较小元素的索引
+   ```
+   `i` 用于记录小于等于枢轴的元素的索引位置，初始值为 `low - 1`。
+
+3. **遍历数组**：
+   ```java
+   for (int j = low; j < high; j++) {
+       if (array[j] <= pivot) {
+           i++;
+           swap(array, i, j);
+       }
+   }
+   ```
+   遍历数组 `array[low]` 到 `array[high-1]`：
+   - 如果当前元素 `array[j]` 小于或等于枢轴，则增加 `i`，并交换 `array[i]` 和 `array[j]`。
+   - 这样做的目的是将小于等于枢轴的元素移到数组的左边。
+
+4. **交换枢轴元素**：
+   ```java
+   swap(array, i + 1, high);
+   ```
+   最后，将枢轴元素 `array[high]` 放到正确的位置，即 `array[i + 1]`。此时，`array[i + 1]` 左边的元素都小于等于枢轴，右边的元素都大于枢轴。
+
+5. **返回枢轴的索引**：
+   ```java
+   return i + 1;
+   ```
+   返回枢轴的最终位置索引。
+
+#### 交换函数 `swap`：
+```java
+private void swap(int[] array, int i, int j) {
+    int temp = array[i];
+    array[i] = array[j];
+    array[j] = temp;
+}
+```
+`swap` 函数用于交换数组中两个元素的位置。
+
+### 总结
+分区方法通过选择一个枢轴元素，并将数组重新排列，使得枢轴左边的元素都小于等于枢轴，右边的元素都大于枢轴。这个过程是递归的，每次分区后，枢轴元素的位置是确定的，最终整个数组将被排序。
+
+Keziah-li: [2,1,3,,7,4,6,5]
+请以这个为例，详细说明上述的步骤
+
+GitHub Copilot: 我们以数组 `[2, 1, 3, 7, 4, 6, 5]` 为例，详细说明 `partition` 方法的步骤。
+
+### 初始状态
+数组：`[2, 1, 3, 7, 4, 6, 5]`
+`low = 0`
+`high = 6`
+枢轴（pivot）：`5`（即 `array[high]`）
+
+### 步骤解析
+
+1. **选择枢轴**：
+   ```java
+   int pivot = array[high]; // pivot = 5
+   ```
+
+2. **初始化较小元素的索引**：
+   ```java
+   int i = low - 1; // i = -1
+   ```
+
+3. **遍历数组**：
+   ```java
+   for (int j = low; j < high; j++) {
+       if (array[j] <= pivot) {
+           i++;
+           swap(array, i, j);
+       }
+   }
+   ```
+
+   - `j = 0`，`array[j] = 2`，`2 <= 5`：
+     - `i++`，`i = 0`
+     - `swap(array, 0, 0)`，数组不变：`[2, 1, 3, 7, 4, 6, 5]`
+
+   - `j = 1`，`array[j] = 1`，`1 <= 5`：
+     - `i++`，`i = 1`
+     - `swap(array, 1, 1)`，数组不变：`[2, 1, 3, 7, 4, 6, 5]`
+
+   - `j = 2`，`array[j] = 3`，`3 <= 5`：
+     - `i++`，`i = 2`
+     - `swap(array, 2, 2)`，数组不变：`[2, 1, 3, 7, 4, 6, 5]`
+
+   - `j = 3`，`array[j] = 7`，`7 > 5`：
+     - `i` 不变，`i = 2`
+     - 不交换，数组不变：`[2, 1, 3, 7, 4, 6, 5]`
+
+   - `j = 4`，`array[j] = 4`，`4 <= 5`：
+     - `i++`，`i = 3`
+     - `swap(array, 3, 4)`，交换后数组：`[2, 1, 3, 4, 7, 6, 5]`
+
+   - `j = 5`，`array[j] = 6`，`6 > 5`：
+     - `i` 不变，`i = 3`
+     - 不交换，数组不变：`[2, 1, 3, 4, 7, 6, 5]`
+
+4. **交换枢轴元素**：
+   ```java
+   swap(array, i + 1, high); // swap(array, 4, 6)
+   ```
+   交换后数组：`[2, 1, 3, 4, 5, 6, 7]`
+
+5. **返回枢轴的索引**：
+   ```java
+   return i + 1; // 返回 4
+   ```
+
+### 最终状态
+数组：`[2, 1, 3, 4, 5, 6, 7]`
+枢轴 `5` 的索引：`4`
+
+### 总结
+通过上述步骤，数组被分成两部分：
+- 左边部分 `[2, 1, 3, 4]` 的所有元素都小于等于枢轴 `5`
+- 右边部分 `[6, 7]` 的所有元素都大于枢轴 `5`
+
+枢轴 `5` 的最终位置是索引 `4`。
+
 运行上述代码将输出排序后的数组。
 ## LeetCode 相关题目
 
@@ -79,17 +414,11 @@ class Solution {
         }
     }
 
-    private int partition(int[] array, int low, int high) {
-        int pivot = array[high]; // 选择最右边的元素作为枢轴
-        int i = low - 1; // 初始化较小元素的索引
-        for (int j = low; j < high; j++) { // 遍历数组
-            if (array[j] <= pivot) { // 如果当前元素小于或等于枢轴
-                i++; // 增加较小元素的索引
-                swap(array, i, j); // 交换元素
-            }
+        for (int j = low; j < high; j++) {
+        if (array[j] <= pivot) {
+            i++;
+            swap(array, i, j);
         }
-        swap(array, i + 1, high); // 将枢轴元素放到正确的位置
-        return i + 1; // 返回枢轴的索引
     }
 
     private void swap(int[] array, int i, int j) {
