--- a/DataStructureAndAlgorithms/1.快速排序.md
+++ b/DataStructureAndAlgorithms/1.快速排序.md
@@ -6,7 +6,7 @@
 
 ```java
 public class QuickSort {
-
+ 
     // 快速排序的主方法，递归地对数组进行排序
     public static void quickSort(int[] array, int low, int high) {
         if (low < high) { // 如果低索引小于高索引，继续排序
@@ -24,6 +24,9 @@ public class QuickSort {
             if (array[j] <= pivot) { // 如果当前元素小于或等于枢轴
                 i++; // 增加较小元素的索引
                 swap(array, i, j); // 交换元素
+                // i++之所以不放在这里的原因：这样做的目的是确保 i 始终指向最后一个小于等于枢轴的元素的位置，然后将当前小于等于枢轴的元素交换到 i 的位置。
+
+
             }
         }
         swap(array, i + 1, high); // 将枢轴元素放到正确的位置
